src/main/java/com/example/test/rest/error/ForbiddenException.java
package com.example.test.rest.error;

public class ForbiddenException extends RuntimeException {
}
